# hms

./: .gitignore  main.py  pyproject.toml  wsgi.py
backend/: __init__.py  app.py  celery_app.py  config.py  extensions.py  seed.py
backend/migrations/versions/: 07b2e3a36f8a_init.py
backend/models/: __init__.py  appointment.py  department.py  doctor.py  patient.py  treatment.py  user.py
backend/routes/: admin_routes.py  auth_routes.py  doctor_routes.py  patient_routes.py
backend/tasks/: tasks.py
backend/utils/: auth.py  cache.py  email_utils.py  errors.py  notifications.py
exports/: treatment_export_1.csv  treatment_export_2.csv
frontend/: index.html  package-lock.json
frontend/src/: main.js
frontend/src/api/: axios.js
frontend/src/assets/: theme.css
frontend/src/components/layouts/: AdminLayout.vue  DoctorLayout.vue  PatientLayout.vue
frontend/src/router/: index.js
frontend/src/views/: Home.vue
frontend/src/views/admin/: Appointments.vue  Dashboard.vue  Departments.vue  Doctors.vue  Patients.vue
frontend/src/views/auth/: Login.vue  Register.vue
frontend/src/views/doctor/: Appointments.vue  Availability.vue  Dashboard.vue  PatientHistory.vue  Patients.vue
frontend/src/views/patient/: Appointments.vue  Dashboard.vue  Export.vue  History.vue  Profile.vue
hms-frontend/: README.md  package.json
reports/: monthly_report_1_2026_02.html
